--- a/src/app/components/all-list/all-list.component.html
+++ b/src/app/components/all-list/all-list.component.html
@@ -1,38 +1,89 @@
-<div class="p-2">
+<div class="px-4 py-2 max-w-4xl mx-auto bg-[#f9fbfc] " [@fadeInOnEnter]>
+  <mat-form-field class="w-2/3 max-w-sm" appearance="outline">
+    <mat-icon matPrefix class="text-[#2969ce]">search</mat-icon>
+    <input matInput (keyup)="applyFilter($event)" class="w-full fomrfield" placeholder="Search a currency" #input>
+  </mat-form-field>
+  <div class="mb-6 p-4  w-full bg-[#2969ce] rounded-3xl">
+    <div class="text-white flex flex-col-reverse md:flex-row">
+      <div class="p-2 m-2">
 
-  <div class="p-4">
-    <button mat-raised-button (click)="addData()" class="mr-4">
-      Add data
-    </button>
-    <button mat-raised-button [disabled]="!dataToDisplay.length" (click)="removeData()" class="demo-button">
-      Remove data
-    </button>
+        <span class="text-3xl font-bold text-slate-200 mb-1">Welcome to Crypto Tracker by GLdev! <br /></span>
+        <span>
+          Explore the world of cryptocurrencies with our real-time tracker. Stay updated on prices, trends, and news.
+          Whether
+          you're a beginner or an expert, our user-friendly interface helps you analyze and track digital assets. Join
+          thousands
+          of traders using Crypto Tracker for valuable insights. Start your crypto journey today!
+
+        </span>
+      </div>
+
+      <div class="min-h-[200px] md:min-w-[200px]">
+        <img width="350" height="350" class="mx-auto md:mx-2" src="/assets/cryptocurrency-3d.png" alt="">
+      </div>
+    </div>
   </div>
 
-  <table mat-table [dataSource]="dataToDisplay" class="mat-elevation-z8 demo-table">
-    <!-- Position Column -->
-    <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef>Currency</th>
-      <td mat-cell *matCellDef="let element">{{element.position}}</td>
-    </ng-container>
+  <div class="drop-shadow-lg p-2 rounded-3xl bg-white">
+    <table mat-table [dataSource]="dataSource" matSort class="table">
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>Rate</th>
-      <td mat-cell *matCellDef="let element">{{element.name}}</td>
-    </ng-container>
+      <!-- <ng-container [matColumnDef]="column" *ngFor="let column of displayedNamesColumns" >
 
-    <!-- <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef>Price</th>
-      <td mat-cell *matCellDef="let element">{{element.weight}}</td>
-    </ng-container>
+        <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+        <td mat-cell *matCellDef="let element"> {{ element[column]}} </td>
+      </ng-container> -->
 
-    <ng-container matColumnDef="symbol">
-      <th mat-header-cell *matHeaderCellDef>Symbol</th>
-      <td mat-cell *matCellDef="let element">{{element.symbol}}</td>
-    </ng-container> -->
+      <ng-container matColumnDef="asset_id_quote">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Currency </th>
+        <td mat-cell *matCellDef="let element">
+          <div class="flex text-slate-600">
+            <img *ngIf="element.logo" class="h-5 w-5 mr-2" [src]="element.logo.url" alt="logo">
+            {{element.asset_id_base}}
+          </div>
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+        <td mat-cell *matCellDef="let element"> <span class="text-slate-500 font-semibold">
+            {{((element.price || 0)| currency:'USD') }} {{mobileQuery.matches ?
+            'USD' : 'EUR'}}
+          </span> </td>
+      </ng-container>
+      <ng-container matColumnDef="volume_1day_usd" *ngIf="!(mobileQuery|async)?.matches">
+        <!-- <ng-container matColumnDef="volume_1day_usd"> -->
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> 24h Vol. </th>
+        <td mat-cell *matCellDef="let element" class="text-slate-600"> {{((element.volume_1day_usd || 0 )|
+          currency:'USD') }} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="favorite">
+        <th mat-header-cell *matHeaderCellDef> Favorite </th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-icon-button (click)="onSelectFavotire(element)" class="" fontIcon="favorite">
+            <mat-icon class="mat-18" color="primary" *ngIf="!element.favorite">add</mat-icon>
+            <mat-icon class="mat-18" color="warn" *ngIf="element.favorite">favorite</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedNamesColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedNamesColumns;"></tr>
+
+      <tr class="mat-row px-4 " *matNoDataRow>
+        <td class="mat-cell" colspan="4" *ngIf="input.value; else showRow">No data matching the filter
+          "{{input.value}}"</td>
+        <ng-container #showRow>
+          <td class="mat-cell " colspan="4">
+            <div *ngFor="let item of loadingRows" class="animate-pulse my-2 bg-indigo-100 w-full h-10 rounded-xl"></div>
+          </td>
+        </ng-container>
+
+
+      </tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of Currencies"></mat-paginator>
+
+  </div>
+
 </div>
