--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,49 @@
+@use '@angular/material' as mat;
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+$ecabs-palette: (
+  50: #e4f3ff,
+  100: #bde0ff,
+  200: #93cdff,
+  300: #68b9ff,
+  400: #48a9ff,
+  500: #2e9bff,
+  600: #2e8cf4,
+  700: #2b7ae0,
+  800: #2968ce,
+  900: #2449af,
+
+  contrast: (50: rgba(black, 0.87),
+    100: rgba(black, 0.87),
+    200: rgba(black, 0.87),
+    300: white,
+    400: white,
+    500: white,
+    600: white,
+    700: white,
+    800: white,
+    900: white,
+    )
+);
+
+$my-primary: mat.define-palette($ecabs-palette, 800);
+$my-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// The "warn" palette is optional and defaults to red if not specified.
+$my-warn: mat.define-palette(mat.$red-palette);
+
+$my-theme: mat.define-light-theme((color: (primary: $my-primary,
+        accent: $my-accent,
+        warn: $my-warn,
+      ),
+      typography: mat.define-typography-config(),
+      density: 0,
+    ));
+
+@include mat.all-component-themes($my-theme);
+
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;}
+
