working currencies and favorites

--- a/src/app/components/favorites-list/favorites-list.component.html
+++ b/src/app/components/favorites-list/favorites-list.component.html
@@ -1,5 +1,5 @@
-<div class="px-1 w-full pt-4 lg:pt-0  h-full ">
-  <div class="lg:flex flex-row-reverse">
+<div class="px-1 w-full pt-4 lg:pt-0 h-full ">
+  <div class="lg:flex flex-row-reverse lg:justify-evenly">
     <div
       class="p-4 mb-4 mx-2 mx-auto w-full lg:w-2/6 min-w-[300px] max-w-[600px] rounded-2xl lg:rounded-sm items-center bg-[#f9fbfc] drop-shadow ">
       <span class="text-lg font-bold text-slate-600 mb-2">Your Favorites</span>
