--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
       <app-side-nav></app-side-nav>
     </mat-sidenav>
     <mat-sidenav-content class="bg-[#1e2e7810]">
-      <div class="px-4 flex items-center justify-between w-full" *ngIf="mobileQuery.matches">
+      <div class="px-4 py-3 flex items-center justify-between w-full" *ngIf="mobileQuery.matches">
         <button mat-mini-fab class="botton-menu" color="primary" (click)="snav.toggle()">
           <mat-icon class="mat-18 h-16 w-16">menu</mat-icon>
         </button>
