--- a/src/app/components/all-list/all-list.component.html
+++ b/src/app/components/all-list/all-list.component.html
@@ -1,4 +1,5 @@
-<div class="px-4 py-2 max-w-4xl mx-auto bg-[#f9fbfc] " [@fadeInOnEnter]>
+<div class="px-4 py-2 max-w-4xl mx-auto bg-[#f9fbfc] rounded-3xl drop-shadow-md lg:rounded-none lg:drop-shadow-none "
+  [@fadeInOnEnter]>
   <mat-form-field class="w-2/3 max-w-sm" appearance="outline">
     <mat-icon matPrefix class="text-[#2969ce]">search</mat-icon>
     <input matInput (keyup)="applyFilter($event)" class="w-full fomrfield" placeholder="Search a currency" #input>
@@ -7,14 +8,10 @@
     <div class="text-white flex flex-col-reverse md:flex-row">
       <div class="p-2 m-2">
 
-        <span class="text-3xl font-bold text-slate-200 mb-1">Welcome to Crypto Tracker by GLdev! <br /></span>
+        <span class="text-3xl font-bold text-slate-200 mb-2">Crypto Tracker by GLdev! <br /></span>
         <span>
-          Explore the world of cryptocurrencies with our real-time tracker. Stay updated on prices, trends, and news.
-          Whether
-          you're a beginner or an expert, our user-friendly interface helps you analyze and track digital assets. Join
-          thousands
-          of traders using Crypto Tracker for valuable insights. Start your crypto journey today!
-
+          Track cryptocurrencies with our live updates. Stay informed on prices and trends. Analyze and monitor digital
+          assets to take the best decisions. Start your journey today!
         </span>
       </div>
 
@@ -27,11 +24,6 @@
   <div class="drop-shadow-lg p-2 rounded-3xl bg-white">
     <table mat-table [dataSource]="dataSource" matSort class="table">
 
-      <!-- <ng-container [matColumnDef]="column" *ngFor="let column of displayedNamesColumns" >
-
-        <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-        <td mat-cell *matCellDef="let element"> {{ element[column]}} </td>
-      </ng-container> -->
 
       <ng-container matColumnDef="asset_id_quote">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Currency </th>
