--- a/src/app/components/favorite-card/favorite-card.component.html
+++ b/src/app/components/favorite-card/favorite-card.component.html
@@ -9,14 +9,16 @@
       <div class="animate-pulse bg-blue-300 rounded-full h-9 w-9"></div>
     </ng-template>
   </div>
-  <div class="flex flex-col lg:flex-row items-start lg:items-center justify-between w-full">
+  <div class="flex flex-col lg:flex-row items-start lg:items-center justify-between w-full min-w-[120px]">
     <div class="mr-2">
       <div class=" text-md/[18px] font-bold text-slate-500">
         <div>{{currencyPar}}</div>
       </div>
     </div>
-    <div class="h-10 text-left lg:text-right text-slate-600  text-md/[18px] flex flex-col ">
-      <div class=" " [@growAnimation]="price">{{(price || 123456 | currency:'USD':'symbol-narrow':'1.2-4' )}} USD</div>
+    <div class="h-10 text-left lg:text-right text-slate-600 text-md/[18px] flex flex-col ">
+      <div class=" overflow-x-auto" [@growAnimation]="(wsPrice$ | async ).wsprice">{{((wsPrice$ | async ) |
+        currency:'USD':'symbol-narrow':'1.2-4'
+        )}} USD</div>
       <div class=" change-percent text-sm align-center" [ngStyle]="{color: change > 0 ? 'green' : 'red'}">
         {{change | percent: '1.1-2'}} 24h
       </div>
