--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,6 +1,15 @@
 <div class="h-screen bg-[#1e2e7810] flex flex-col justify-between">
+
   <div>
-    <img src="/assets/logo.png" class="mb-8 p-4" alt="logo crypto tracker">
+    <img src="/assets/logo.png" class="mb-4 p-4" alt="logo crypto tracker">
+    <div class="text-slate-600 mb-6 px-4 h-14 ">
+      <div class="flex flex-col text-md" *ngIf="userData">
+
+        Welcome,
+        <span class="text-slate-500 text-2xl font-bold mb-2">{{userData?.displayName !== '' ? userData?.displayName :
+          userData?.email}}</span>
+      </div>
+    </div>
     <div class="flex w-full items-center mb-2">
       <div class="w-2">
         <div class=" w-2 h-14 bg-[#2969ce] rounded-e-xl" *ngIf="selected === '/dashboard/home'" [@slideInLeft]></div>
@@ -28,16 +37,22 @@
 
   </div>
 
-  <div class="flex w-full items-center mb-12">
-    <div class="w-4">
-    </div>
-    <div (click)="onLogOut($event)" class="p-2 ml-2 mx-4 h-16 w-5/6 rounded-xl bg-slate-300 flex items-center">
+  <div class="flex w-full flex-col items-center mb-6">
+
+
+    <!-- <div class="w-4">
+      </div> -->
+    <div (click)="onLogOut($event)" class="p-2 mb-3 mx-4 h-16 w-5/6 rounded-xl bg-slate-300 flex items-center">
       <mat-icon class="mat-24 mx-2">power_settings_new</mat-icon>
       <span class=" text-lg font-bold text-slate-600">Log Out</span>
+
     </div>
 
+    <div class="mx-auto px-4 text-center text-slate-500 text-xs">
+      <span>By Gabriel Londono, applying for Front-end Engineer, 2023</span>
+      <br />Thanks for the oportunity and your time.
+    </div>
   </div>
-
 
 
 </div>
