--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -14,7 +14,7 @@
         <!-- Calling SignIn Api from AuthService -->
         <div class="formGroup mt-8">
           <button mat-raised-button color="primary" class="w-full"
-            (click)="authService.SignIn(email.value, userPassword.value)">Log
+            (click)="onLogin(email.value, userPassword.value)">Log
             In</button>
 
         </div>
