--- a/src/app/components/sign-up/sign-up.component.html
+++ b/src/app/components/sign-up/sign-up.component.html
@@ -17,7 +17,7 @@
         </div>
         <div class="formGroup mt-8">
           <button mat-raised-button color="primary" class="w-full"
-            (click)="authService.SignUp(userEmail.value, userPwd.value, userName.value)">
+            (click)="onSignUp(userEmail.value, userPwd.value, userName.value)">
             Sign Up</button>
 
         </div>
