--- a/src/app/components/favorites-list/favorites-list.component.html
+++ b/src/app/components/favorites-list/favorites-list.component.html
@@ -1,15 +1,18 @@
 <div class="px-1 w-full pt-4 lg:pt-0 h-full ">
   <div class="lg:flex flex-row-reverse lg:justify-evenly">
     <div
-      class="p-4 mb-4 mx-2 mx-auto w-full lg:w-2/6 min-w-[300px] max-w-[600px] rounded-2xl lg:rounded-sm items-center bg-[#f9fbfc] drop-shadow ">
-      <span class="text-lg font-bold text-slate-600 mb-2">Your Favorites</span>
-      <div class="scroll-container mx-2 mb-2 overflow-x-auto max-h-screen">
-        <app-favorite-card (selectFavotire)="onSelectedFavotire($event)" *ngFor="let favorite of favorites"
-          [favoriteId]="favorite"></app-favorite-card>
+      class="p-2 mb-4 mx-1 mx-auto w-full lg:w-2/6 min-w-[315px] max-w-[600px] rounded-2xl lg:rounded-sm items-center bg-[#f9fbfc] drop-shadow ">
+      <div class=" flex lg:items-center justify-center text-lg font-bold text-slate-600 mb-2 lg:h-14 mx-3 ">
+
+        <span class="">Your Favorites</span>
+      </div>
+      <div class="scroll-container mb-2 overflow-x-auto max-h-screen">
+        <app-favorite-card (selectFavotire)="onSelectedFavotire($event)"
+          *ngFor="let favorite of favorites; trackBy: trackByFn" [favoriteId]="favorite"></app-favorite-card>
       </div>
     </div>
     <div
-      class="p-4 mb-2 mx-auto lg:mx-4 h-full min-h-screen  max-w-[600px] lg:w-full lg:w-4/6 min-w-[350px] rounded-2xl lg:rounded-sm bg-[#f9fbfc] drop-shadow">
+      class="p-4 mb-2 mx-auto lg:mx-4 h-full min-h-screen  max-w-[600px] lg:w-full lg:w-4/6 min-w-[320px] rounded-2xl lg:rounded-sm bg-[#f9fbfc] drop-shadow">
       <div
         class="mb-4 flex flex-col sm:flex-row items-center justify-evenly bg-[#2969ce] rounded-3xl p-4 text-white mt-2 drop-shadow-lg">
         <img class="m-2 min-h-[46px]" height="160" width="160" src="/assets/chart11.png" alt="logo tracker" />
